<resources>
    <string name="app_name">Monkey Shoes</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_login">New! Create a Login</string>
    <string name="enter_your_email_here">Enter Your Email Here</string>
    <string name="password_goes_here">Password Goes Here</string>
    <string name="welcome_to_monkey_shoes">Welcome to Monkey Shoes</string>
    <string name="stolen_shoes">The place where you find all those shoes those monkeys have stolen!</string>
    <string name="welcome_continue">Continue</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_info">You will get to see all the shoes that the monkeys stolen from you. You can select on to get more details about those shoes. And you can add shoes that the monkeys stolen from you.</string>
    <string name="find_shoes">Find My Shoes</string>
    <string name="shoe_name_label">Name:</string>
    <string name="shoe_company_label">Company:</string>
    <string name="logout">Logout</string>
    <string name="this_goes_to_screen_to_add_new_shoe">This goes to screen to add new shoe</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_size_here">Enter Size Here</string>
    <string name="enter_shoe_name">Enter Shoe Name</string>
    <string name="enter_company_name">Enter Company Name</string>
    <string name="size_label">Size:</string>
    <string name="desc_label">Desc:</string>
    <string name="enter_description_here">Enter Description Here</string>
</resources>
