<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="showListingViewModel"
            type="com.udacity.shoestore.shoelisting.ShoeListingViewModel" />
    </data>

    <!-- Use Constraint layout to have more complexity with the two buttons and the different fields, could have also used linear -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/cancelButton"
            style="@style/FunButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorAccent"
            android:text="@string/cancel"
            android:onClick="@{() -> showListingViewModel.onExit()}"
            android:clickable="true"
            app:layout_constraintBaseline_toBaselineOf="@+id/saveButton"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            android:focusable="true" />

        <Button
            android:id="@+id/saveButton"
            style="@style/FunButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:text="@string/save"
            android:onClick="@{() -> showListingViewModel.addShoes()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toBottomOf="@+id/editShoeDesc" />

        <EditText
            android:id="@+id/editSizeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_size_here"
            android:inputType="numberDecimal"
            android:text="@={showListingViewModel.size}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoeSizeTitle"
            app:layout_constraintTop_toBottomOf="@+id/editCompany"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editShoeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_shoe_name"
            android:inputType="text"
            android:text="@={showListingViewModel.shoeName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoeNameTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editCompany"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_company_name"
            android:inputType="textPersonName"
            android:text="@={showListingViewModel.companyName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoeCompanyTitle"
            app:layout_constraintTop_toBottomOf="@+id/editShoeName"
            android:autofillHints="" />

        <TextView
            android:id="@+id/shoeCompanyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_company_label"
            android:textAppearance="@style/FunInfo"
            app:layout_constraintBaseline_toBaselineOf="@+id/editCompany"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoeNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/shoe_name_label"
            android:textAppearance="@style/FunInfo"
            app:layout_constraintBaseline_toBaselineOf="@+id/editShoeName"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/shoeSizeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/size_label"
            android:textAppearance="@style/FunInfo"
            app:layout_constraintBaseline_toBaselineOf="@+id/editSizeText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/descTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/desc_label"
            android:textAppearance="@style/FunInfo"
            app:layout_constraintBaseline_toBaselineOf="@+id/editShoeDesc"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editShoeDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/enter_description_here"
            android:inputType="textPersonName"
            android:text="@={showListingViewModel.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/descTitle"
            app:layout_constraintTop_toBottomOf="@+id/editSizeText"
            android:autofillHints="" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
